--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
   "dependencies": {
     "@openzeppelin/contracts": "^4.7.3",
     "dotenv": "^16.0.3",
-    "hardhat": "^2.12.1"
+    "hardhat": "^2.12.1",
+    "prompts": "^2.4.2"
   },
   "devDependencies": {
     "@ethersproject/abi": "^5.4.7",
@@ -21,8 +22,15 @@
     "ethers": "^5.4.7",
     "hardhat-gas-reporter": "^1.0.8",
     "solidity-coverage": "^0.8.0",
-    "ts-node": ">=8.0.0",
+    "ts-node": "^10.9.1",
     "typechain": "^8.1.0",
     "typescript": ">=4.5.0"
-  }
+  },
+  "name": "cambridge-hack",
+  "version": "1.0.0",
+  "description": "cambridge hacked",
+  "main": "kyc.js",
+  "repository": "git@github.com:swapnilraj/cambridge-hack.git",
+  "author": "Swapnil Raj <raj.swapnil99@gmail.com>",
+  "license": "MIT"
 }
